# django_events_sourcing

./: README.md  deploy.sh  requirements.txt  setup.cfg
django_events_sourcing/: __init__.py  apps.py  dispatcher.py  register.py  signals.py  testing.py  utils.py
django_events_sourcing/nameko/: events.py
django_events_sourcing/senders/: kombu.py
tests/: settings.py
tests/test_app/: models.py  serializers.py
tests/test_app/tests/: test_dispatcher.py
