[metadata]
name = django_events_sourcing
version = 0.1
description = A Django app to dispatch events when model Create/Update and Delete operations are made.
long_description = file: README.rst
url = https://github.com/Mendes11/django_events_sourcing
author = Rafael Mendes Pacini Bachiega
author_email = rafaelmpb11@hotmail.com
license = Apache 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2.8
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
install_requires=[
        "nameko>=2.12.0",
        "Django>=2.2",
        "djangorestframework>=3.1"
    ]

[options]
include_package_data = true
packages = find: